--- a/timetable/views/timetable_view.xml
+++ b/timetable/views/timetable_view.xml
@@ -22,7 +22,7 @@
                         />
                             <field
                             name="class_room_id"
-                            options="{&quot;no_create&quot;: True}"
+                            options="{'no_create': True}"
                             invisible="1"
                         />
                             <field name="user_ids" invisible="1" />
@@ -111,12 +111,12 @@
         groups="school.group_school_administration,school.group_school_teacher,school.group_school_student,school.group_school_parent"
         sequence="1"
     />
-        <menuitem
+        <!-- <menuitem
         id="menu_timetable_regular"
         name="Regular Timetable"
         parent="menu_timetable_1"
         action="action_timetable_regular"
         groups="school.group_school_administration,school.group_school_teacher,school.group_school_student,school.group_school_parent"
         sequence="61"
-    />
+    /> -->
 </odoo>
